2022-04-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.7-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.7-alpha05: ';git push
	git tag -a 5.0.7-alpha05 -m 'Easter';git push --tags

	* Check that omitting #define NEED_XXXF in nco_rth_flt.[ch] builds everywhere

2022-04-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.7-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.7-alpha04: sub-sgs normalization for landunit-specific fields';git push
	git tag -a 5.0.7-alpha04 -m 'Poke Kai';git push --tags

	* nco_rgr_wgt() allows for missing values in fields with valid SGS area
	Previously, assumed SGS fields to be valid wherever sgs_frc > 0.0
	That low-biased fields like TSOI which are sub-SGS normalized to specific landunits
	Now sub-SGS values are extrapolated, incorrect though not crazy-bad like before
	No more temperatures near 0.0 for landunit-specific fields in ELM/CLM

2022-04-13  Charlie Zender  <zender@uci.edu>

	* ncremap fix --sgs_frc and prc_typ logic, introduce prc_sgs, fix sgs_nm_gnr logic

2022-04-03  Charlie Zender  <zender@uci.edu>

	* nco_bld_rec_dmn() call nco_lmt_init() on new limits

2022-03-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.7-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.7-alpha03: ncremap -P bugfix, SGS spot-check wrn';git push
	git tag -a 5.0.7-alpha03 -m 'Afterlife';git push --tags

	* Change ncremap test to use NCO weights so test succeeds when ERWG not available

	* Add synonyms preserve=gridcell, gridcell_mean, natural_values

2022-03-24  Charlie Zender  <zender@uci.edu>

	* ncremap warn when SGS not invoked despite presence of indicator variables

	* ncremap/ncclimo always enclose -n/-z shell variables in double quotes

	* Discover 5.0.6 (or earlier?) bug preventing ncremap from parsing -P prc_typ options
	However, ncclimo --sgs_frc=XXX options were passed and parsed correctly
	And ncclimo -P prc_typ was used correctly (and necessarily) for	name generation